syntax = "proto3";

package AutoFuzz;

message FuzzArgsProfile {
  repeated sint32 fuzzvar0 = 1;
  repeated sint32 fuzzvar1 = 2;
  repeated sint32 fuzzvar2 = 3;
  repeated sint32 fuzzvar3 = 4;
  repeated sint32 fuzzvar13 = 5;
  repeated sint32 fuzzvar14 = 6;
  repeated sint32 fuzzvar15 = 7;
  bytes fuzzvar16 = 8;
  bytes fuzzvar17 = 9;
  repeated sint32 fuzzvar18 = 10;
  bytes fuzzvar20 = 11;
  repeated sint32 fuzzvar22 = 12;
  repeated sint32 fuzzvar23 = 13;
}

